--- a/index.html
+++ b/index.html
@@ -28,121 +28,111 @@
                     <span></span>
                 </div>
             </div>
-                <div class="header-menu__list menu-list">
-                    <ul>
-                        <li class="menu-list__item"><a href="javascript:void[0]">Link #1</a></li>
-                        <li class="menu-list__item"><a href="javascript:void[0]">Link #2</a></li>
-                        <li class="menu-list__item"><a href="javascript:void[0]">Link #3</a></li>
-                        <li class="menu-list__item"><a href="javascript:void[0]">Link #4</a></li>
-                        <li class="menu-list__item"><a href="javascript:void[0]">Link #5</a></li>
-                    </ul>
-                </div>
-
+            <div class="header-menu__list menu-list">
+                <ul>
+                    <li class="menu-list__item"><a href="javascript:void[0]">Link #1</a></li>
+                    <li class="menu-list__item"><a href="javascript:void[0]">Link #2</a></li>
+                    <li class="menu-list__item"><a href="javascript:void[0]">Link #3</a></li>
+                    <li class="menu-list__item"><a href="javascript:void[0]">Link #4</a></li>
+                    <li class="menu-list__item"><a href="javascript:void[0]">Link #5</a></li>
+                </ul>
+            </div>
         </div>
-
     </div>
 </header>
 
-    <div class="slide-block-head">
-        <div class="container">
-            <div class="slide-block-head__heading">
-                <h1>Meet Perth,</h1>
-                <p>A stupidly simple, flat PSD. Oh yeah, it’s <b>free</b> too!</p>
-            </div>
-            <div class="slide-block-head__bnt">
-                <a class="btn btn--white-blue" href="javascript:void[0]">DOWNLOAD</a>
-            </div>
+<div class="slide-block-head">
+    <div class="container container--slide-block-head">
+        <div class="slide-block-head__heading">
+            <h1>Meet Perth,</h1>
+            <p>A stupidly simple, flat PSD. Oh yeah, it’s <b>free</b> too!</p>
+        </div>
+        <div class="slide-block-head__bnt">
+            <a class="btn btn--white-blue" href="javascript:void[0]">DOWNLOAD</a>
+        </div>
 
+    </div>
+</div>
+
+
+<div class="slide-block">
+    <div class="container">
+        <div class="slider-block__heading">
+            A Longwinded Header
+        </div>
+        <div class="slider-block__text">
+            She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a doovalacky. We're
+            going rack off bloody she'll be right pash. You little ripper tucker also get a dog up ya greenie.
+        </div>
+        <div class="slider-block__text slider-block__text--with-line">
+            You little ripper boozer no worries she'll be right holy dooley! Come a freo also as cross as a your
+            shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab us a trackie
+            dacks.
+        </div>
+        <div class="slide-block-head__bnt">
+            <a class="btn btn--green" href="javascript:void[0]">SAY HELLO</a>
         </div>
     </div>
+</div>
 
 
-
-    <div class="slide-block">
-        <div class="container">
-            <div class="slider-block__heading">
-                A Longwinded Header
-            </div>
-            <div class="slider-block__text">
-                She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a doovalacky. We're
-                going rack off bloody she'll be right pash. You little ripper tucker also get a dog up ya greenie.
-            </div>
-            <div class="slider-block__text slider-block__text--with-line">
-                You little ripper boozer no worries she'll be right holy dooley! Come a freo also as cross as a your
-                shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab us a trackie
-                dacks.
-            </div>
-            <div class="slide-block-head__bnt">
-                <a class="btn btn--green" href="javascript:void[0]">SAY HELLO</a>
-            </div>
+<div class="slide-block slide-block--arrownd">
+    <div class="container">
+        <div class="slider-block__heading">
+            A Longwinded Header
+        </div>
+        <div class="slider-block__text">
+            She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a doovalacky. We're
+            going rack off bloody she'll be right pash. You little ripper tucker also get a dog up ya greenie.
+        </div>
+        <div class="slider-block__text slider-block__text--with-line">
+            You little ripper boozer no worries she'll be right holy dooley! Come a freo also as cross as a your
+            shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab us a trackie
+            dacks.
+        </div>
+        <div class="slide-block-head__bnt">
+            <a class="btn btn--red" href="javascript:void[0]">VIEW ON DRIBBBLE</a>
         </div>
     </div>
+</div>
 
-
-<section>
-    <div class="slide-block slide-block--arrownd">
-        <div class="container">
-            <div class="slider-block__heading">
-                A Longwinded Header
-            </div>
-            <div class="slider-block__text">
-                She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a doovalacky. We're
-                going rack off bloody she'll be right pash. You little ripper tucker also get a dog up ya greenie.
-            </div>
-            <div class="slider-block__text slider-block__text--with-line">
-                You little ripper boozer no worries she'll be right holy dooley! Come a freo also as cross as a your
-                shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab us a trackie
-                dacks.
-            </div>
-            <div class="slide-block-head__bnt">
-                <a class="btn btn--red" href="javascript:void[0]">VIEW ON DRIBBBLE</a>
-            </div>
+<div class="slide-block slide-block--center">
+    <div class="container">
+        <div class="slider-block__heading">
+            Like What You See?
+        </div>
+        <div class="slide-block-head__bnt">
+            <a class="btn btn--white-green" href="javascript:void[0]">VIEW ON DRIBBBLE</a>
         </div>
     </div>
-</section>
-
-<section>
-    <div class="slide-block slide-block--center">
-        <div class="container">
-            <div class="slider-block__heading">
-                Like What You See?
+</div>
+<div class="slide-block">
+    <div class="container">
+        <div class="slider-block__soc-list soc-list">
+            <div class="soc-list__item soc-list__item--dribble">
+                <span></span>
             </div>
-            <div class="slide-block-head__bnt">
-                <a class="btn btn--white-green" href="javascript:void[0]">VIEW ON DRIBBBLE</a>
+            <div class="soc-list__item soc-list__item--facebook">
+                <span></span>
+            </div>
+            <div class="soc-list__item soc-list__item--twitter">
+                <span></span>
+            </div>
+            <div class="soc-list__item soc-list__item--telegram">
+                <span></span>
             </div>
         </div>
-    </div>
-</section>
-
-<section>
-    <div class="slide-block">
-        <div class="container">
-            <div class="slider-block__soc-list soc-list">
-                <div class="soc-list__item soc-list__item--dribble">
-                    <span></span>
+        <div class="slider-block__form">
+            <form method="post" action="">
+                <div class="group-item">
+                    <input class="js_text-area-form" name="forMail" placeholder="Enter Email" type="text">
+                    <span>Newsletter Subscription</span>
                 </div>
-                <div class="soc-list__item soc-list__item--facebook">
-                    <span></span>
-                </div>
-                <div class="soc-list__item soc-list__item--twitter">
-                    <span></span>
-                </div>
-                <div class="soc-list__item soc-list__item--telegram">
-                    <span></span>
-                </div>
-            </div>
-            <div class="slider-block__form">
-                <form method="post" action="">
-                    <div class="group-item">
-                        <input class="js_text-area-form" name="forMail" placeholder="Enter Email" type="text">
-                        <span>Newsletter Subscription</span>
-                    </div>
-                </form>
-            </div>
-
+            </form>
         </div>
+
     </div>
-</section>
+</div>
 
 <footer>
     <div class="slide-block-footer">
