--- a/index.html
+++ b/index.html
@@ -16,121 +16,143 @@
 
 <header>
     <div class="header-block">
-        <div class="container container--header-block">
-            <div class="header-block__icon-logo">
-                <img src="../img/icon/logo.svg" alt="">
-            </div>
-            <div class="header-block__menu header-menu">
-                <div class="header-menu__icon">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+        <div class="container">
+            <div class="row row--header-block">
+                <div class="header-block__icon-logo">
+                    <img src="../img/icon/logo.svg" alt="">
                 </div>
-            </div>
-            <div class="header-menu__list menu-list">
-                <ul>
-                    <li class="menu-list__item"><a href="javascript:void[0]">Link #1</a></li>
-                    <li class="menu-list__item"><a href="javascript:void[0]">Link #2</a></li>
-                    <li class="menu-list__item"><a href="javascript:void[0]">Link #3</a></li>
-                    <li class="menu-list__item"><a href="javascript:void[0]">Link #4</a></li>
-                    <li class="menu-list__item"><a href="javascript:void[0]">Link #5</a></li>
-                </ul>
+                <div class="header-block__menu header-menu">
+                    <div class="header-menu__icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <div class="header-menu__list menu-list">
+                    <ul>
+                        <li class="menu-list__item"><a href="javascript:void[0]">Link #1</a></li>
+                        <li class="menu-list__item"><a href="javascript:void[0]">Link #2</a></li>
+                        <li class="menu-list__item"><a href="javascript:void[0]">Link #3</a></li>
+                        <li class="menu-list__item"><a href="javascript:void[0]">Link #4</a></li>
+                        <li class="menu-list__item"><a href="javascript:void[0]">Link #5</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
 </header>
 
 <div class="slide-block-head">
-    <div class="container container--slide-block-head">
-        <div class="slide-block-head__heading">
-            <h1>Meet Perth,</h1>
-            <p>A stupidly simple, flat PSD. Oh yeah, it’s <b>free</b> too!</p>
-        </div>
-        <div class="slide-block-head__bnt">
-            <a class="btn btn--white-blue" href="javascript:void[0]">DOWNLOAD</a>
-        </div>
+    <div class="container">
+        <div class="row row--slide-block-head">
+            <div class="slide-block-head__heading">
+                <h1>Meet Perth,</h1>
+                <p>A stupidly simple, flat PSD. Oh yeah, it’s <b>free</b> too!</p>
+                <a class="btn btn--white-blue" href="javascript:void[0]">DOWNLOAD<i class="fas fa-download"></i></a>
+            </div>
 
+        </div>
     </div>
 </div>
 
 
 <div class="slide-block">
     <div class="container">
-        <div class="slider-block__heading">
-            A Longwinded Header
-        </div>
-        <div class="slider-block__text">
-            She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a doovalacky. We're
-            going rack off bloody she'll be right pash. You little ripper tucker also get a dog up ya greenie.
-        </div>
-        <div class="slider-block__text slider-block__text--with-line">
-            You little ripper boozer no worries she'll be right holy dooley! Come a freo also as cross as a your
-            shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab us a trackie
-            dacks.
-        </div>
-        <div class="slide-block-head__bnt">
-            <a class="btn btn--green" href="javascript:void[0]">SAY HELLO</a>
+        <div class="row row--slide-block">
+            <div class="slide-block__content slide-content">
+                <div class="slide-content__heading">
+                    A Longwinded Header
+                </div>
+                <div class="slide-content__text">
+                    She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a doovalacky.
+                    We're
+                    going rack off bloody she'll be right pash. You little ripper tucker also get a dog up ya greenie.
+                </div>
+                <div class="slide-content__text slide-content__text--with-line">
+                    You little ripper boozer no worries she'll be right holy dooley! Come a freo also as cross as a your
+                    shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab us a trackie
+                    dacks.
+                </div>
+                <div class="slide-content__btn">
+                    <a class="btn btn--green" href="javascript:void[0]">SAY HELLO <i class="fas fa-envelope"></i></a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
 
-<div class="slide-block slide-block--arrownd">
+<div class="slide-block slide-block--around">
     <div class="container">
-        <div class="slider-block__heading">
-            A Longwinded Header
-        </div>
-        <div class="slider-block__text">
-            She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a doovalacky. We're
-            going rack off bloody she'll be right pash. You little ripper tucker also get a dog up ya greenie.
-        </div>
-        <div class="slider-block__text slider-block__text--with-line">
-            You little ripper boozer no worries she'll be right holy dooley! Come a freo also as cross as a your
-            shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab us a trackie
-            dacks.
-        </div>
-        <div class="slide-block-head__bnt">
-            <a class="btn btn--red" href="javascript:void[0]">VIEW ON DRIBBBLE</a>
+        <div class="row row--around-slide-block">
+            <div class="slide-block__content slide-content">
+                <div class="slide-content__heading">
+                    A Longwinded Header
+                </div>
+                <div class="slide-content__text slide-content__text--bold">
+                    You little ripper boozer no worries she'll be right holy dooley! Come a freo also as cross as a your
+                    shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab us a trackie
+                    dacks.
+                </div>
+                <div class="slide-content__text">
+                    She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a doovalacky.
+                    We're
+                    going rack off bloody she'll be right pash. You little ripper tucker also get a dog up ya greenie.
+                </div>
+
+                <div class="slide-content__btn">
+                    <a class="btn btn--red" href="javascript:void[0]">VIEW ON DRIBBBLE<i
+                            class="fab fa-dribbble"></i></a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
 <div class="slide-block slide-block--center">
     <div class="container">
-        <div class="slider-block__heading">
-            Like What You See?
-        </div>
-        <div class="slide-block-head__bnt">
-            <a class="btn btn--white-green" href="javascript:void[0]">VIEW ON DRIBBBLE</a>
+        <div class="row row--center-slide-block">
+            <div class="slide-block__content slide-content">
+                <div class="slide-content__heading">
+                    Like What You See?
+                </div>
+                <div class="slide-content__btn">
+                    <a class="btn btn--green" href="javascript:void[0]">Buy me a beer?<i class="fas fa-beer"></i></a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="slide-block">
+<div class="slide-block slide-block--soc">
     <div class="container">
-        <div class="slider-block__soc-list soc-list">
-            <div class="soc-list__item soc-list__item--dribble">
-                <span></span>
-            </div>
-            <div class="soc-list__item soc-list__item--facebook">
-                <span></span>
-            </div>
-            <div class="soc-list__item soc-list__item--twitter">
-                <span></span>
-            </div>
-            <div class="soc-list__item soc-list__item--telegram">
-                <span></span>
-            </div>
-        </div>
-        <div class="slider-block__form">
-            <form method="post" action="">
-                <div class="group-item">
-                    <input class="js_text-area-form" name="forMail" placeholder="Enter Email" type="text">
-                    <span>Newsletter Subscription</span>
+        <div class="row row--soc-slide-block">
+            <div class="slide-block__content slide-content">
+                <div class="slide-content__soc-list soc-list">
+                    <div class="soc-list__item soc-list__item--dribble">
+                        <span><i class="fab fa-dribbble"></i></span>
+                    </div>
+                    <div class="soc-list__item soc-list__item--facebook">
+                        <span><i class="fab fa-facebook-f"></i></span>
+                    </div>
+                    <div class="soc-list__item soc-list__item--twitter">
+                        <span><i class="fab fa-twitter"></i></span>
+                    </div>
+                    <div class="soc-list__item soc-list__item--telegram">
+                        <span><i class="far fa-paper-plane"></i></span>
+                    </div>
                 </div>
-            </form>
-        </div>
+                <div class="slide-content__form">
+                    <form method="post" action="">
+                        <div class="group-item">
+                            <input class="js_text-area-form" name="forMail" placeholder="Enter Email" type="text">
+                            <span>Newsletter Subscription</span>
+                        </div>
+                    </form>
+                </div>
 
+            </div>
+        </div>
     </div>
 </div>
 
@@ -144,15 +166,6 @@
         </div>
     </div>
 </footer>
-
-
-<!--<i class="fa fa-download" aria-hidden="true"></i>-->
-<!--<i class="fa fa-envelope" aria-hidden="true"></i>-->
-<!--<i class="fa fa-dribbble" aria-hidden="true"></i>-->
-<!--<i class="fa fa-beer" aria-hidden="true"></i>-->
-<!--<i class="fa fa-facebook" aria-hidden="true"></i>-->
-<!--<i class="fa fa-twitter" aria-hidden="true"></i>-->
-<!--<i class="fa fa-paper-plane-o" aria-hidden="true"></i>-->
 
 
 <script src="../js/lib/swiper.min.js"></script>
