--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>IT zebra</title>
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
+    <!--<meta name="viewport"-->
+          <!--content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
     <link rel="stylesheet" href="../css/lib/swiper.min.css">
     <link rel="stylesheet" href="../css/fonts.min.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -14,161 +16,205 @@
 </head>
 <body>
 
-<header>
-    <div class="header-block">
-        <div class="container">
-            <div class="row row--header-block">
-                <div class="header-block__icon-logo">
-                    <img src="../img/icon/logo.svg" alt="">
-                </div>
-                <div class="header-block__menu header-menu">
-                    <div class="header-menu__icon">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-                <div class="header-menu__list menu-list">
-                    <ul>
-                        <li class="menu-list__item"><a href="javascript:void[0]">Link #1</a></li>
-                        <li class="menu-list__item"><a href="javascript:void[0]">Link #2</a></li>
-                        <li class="menu-list__item"><a href="javascript:void[0]">Link #3</a></li>
-                        <li class="menu-list__item"><a href="javascript:void[0]">Link #4</a></li>
-                        <li class="menu-list__item"><a href="javascript:void[0]">Link #5</a></li>
-                    </ul>
+<div class="header-block">
+    <div class="container">
+        <div class="row row--header-block">
+            <div class="header-block__icon-logo">
+                <img src="../img/icon/logo.svg" alt="">
+            </div>
+            <div class="header-block__menu header-menu">
+                <div class="header-menu__icon js_header-menu-open">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
-        </div>
-    </div>
-</header>
+            <div class="header-menu__list menu-list js_menu-list">
+                <div class="menu-list__close-icon js_close-icon"><i class="far fa-times-circle"></i></div>
 
-<div class="slide-block-head">
-    <div class="container">
-        <div class="row row--slide-block-head">
-            <div class="slide-block-head__heading">
-                <h1>Meet Perth,</h1>
-                <p>A stupidly simple, flat PSD. Oh yeah, it’s <b>free</b> too!</p>
-                <a class="btn btn--white-blue" href="javascript:void[0]">DOWNLOAD<i class="fas fa-download"></i></a>
-            </div>
-
-        </div>
-    </div>
-</div>
-
-
-<div class="slide-block">
-    <div class="container">
-        <div class="row row--slide-block">
-            <div class="slide-block__content slide-content">
-                <div class="slide-content__heading">
-                    A Longwinded Header
-                </div>
-                <div class="slide-content__text">
-                    She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a doovalacky.
-                    We're
-                    going rack off bloody she'll be right pash. You little ripper tucker also get a dog up ya greenie.
-                </div>
-                <div class="slide-content__text slide-content__text--with-line">
-                    You little ripper boozer no worries she'll be right holy dooley! Come a freo also as cross as a your
-                    shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab us a trackie
-                    dacks.
-                </div>
-                <div class="slide-content__btn">
-                    <a class="btn btn--green" href="javascript:void[0]">SAY HELLO <i class="fas fa-envelope"></i></a>
-                </div>
+                <ul>
+                    <li class="menu-list__item"><a href="javascript:void[0]">Link #1</a></li>
+                    <li class="menu-list__item"><a href="javascript:void[0]">Link #2</a></li>
+                    <li class="menu-list__item"><a href="javascript:void[0]">Link #3</a></li>
+                    <li class="menu-list__item"><a href="javascript:void[0]">Link #4</a></li>
+                    <li class="menu-list__item"><a href="javascript:void[0]">Link #5</a></li>
+                </ul>
             </div>
         </div>
     </div>
 </div>
 
-
-<div class="slide-block slide-block--around">
-    <div class="container">
-        <div class="row row--around-slide-block">
-            <div class="slide-block__content slide-content">
-                <div class="slide-content__heading">
-                    A Longwinded Header
-                </div>
-                <div class="slide-content__text slide-content__text--bold">
-                    You little ripper boozer no worries she'll be right holy dooley! Come a freo also as cross as a your
-                    shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab us a trackie
-                    dacks.
-                </div>
-                <div class="slide-content__text">
-                    She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a doovalacky.
-                    We're
-                    going rack off bloody she'll be right pash. You little ripper tucker also get a dog up ya greenie.
-                </div>
-
-                <div class="slide-content__btn">
-                    <a class="btn btn--red" href="javascript:void[0]">VIEW ON DRIBBBLE<i
-                            class="fab fa-dribbble"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="slide-block slide-block--center">
-    <div class="container">
-        <div class="row row--center-slide-block">
-            <div class="slide-block__content slide-content">
-                <div class="slide-content__heading">
-                    Like What You See?
-                </div>
-                <div class="slide-content__btn">
-                    <a class="btn btn--green" href="javascript:void[0]">Buy me a beer?<i class="fas fa-beer"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="slide-block slide-block--soc">
-    <div class="container">
-        <div class="row row--soc-slide-block">
-            <div class="slide-block__content slide-content">
-                <div class="slide-content__soc-list soc-list">
-                    <div class="soc-list__item soc-list__item--dribble">
-                        <span><i class="fab fa-dribbble"></i></span>
-                    </div>
-                    <div class="soc-list__item soc-list__item--facebook">
-                        <span><i class="fab fa-facebook-f"></i></span>
-                    </div>
-                    <div class="soc-list__item soc-list__item--twitter">
-                        <span><i class="fab fa-twitter"></i></span>
-                    </div>
-                    <div class="soc-list__item soc-list__item--telegram">
-                        <span><i class="far fa-paper-plane"></i></span>
-                    </div>
-                </div>
-                <div class="slide-content__form">
-                    <form method="post" action="">
-                        <div class="group-item">
-                            <input class="js_text-area-form" name="forMail" placeholder="Enter Email" type="text">
-                            <span>Newsletter Subscription</span>
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">
+            <div class="slide-block-head">
+                <div class="container">
+                    <div class="row row--slide-block-head">
+                        <div class="slide-block-head__heading">
+                            <h1>Meet Perth,</h1>
+                            <p>A stupidly simple, flat PSD. Oh yeah, it’s <b>free</b> too!</p>
+                            <a class="btn btn--white-blue" href="javascript:void[0]">DOWNLOAD<i
+                                    class="fas fa-cloud-download-alt"></i></a>
                         </div>
-                    </form>
-                </div>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="swiper-slide">
+            <div class="slide-block">
+                <div class="container">
+                    <div class="row row--slide-block">
+                        <div class="slide-block__content slide-content">
+                            <div class="slide-content__heading">
+                                A Longwinded Header
+                            </div>
+                            <div class="slide-content__text">
+                                She'll be right paddock how lets throw a ciggies. She'll be right ute to built like a
+                                doovalacky.
+                                We're
+                                going rack off bloody she'll be right pash. You little ripper tucker also get a dog up
+                                ya
+                                greenie.
+                            </div>
+                            <div class="slide-content__text slide-content__text--with-line">
+                                You little ripper boozer no worries she'll be right holy dooley! Come a freo also as
+                                cross
+                                as a your
+                                shout. Lets throw a kne sanh flamin dead dingo's donger. Lets get some fisho with grab
+                                us a
+                                trackie
+                                dacks.
+                            </div>
+                            <div class="slide-content__btn">
+                                <a class="btn btn--green" href="javascript:void[0]">SAY HELLO <i
+                                        class="fas fa-envelope"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="swiper-slide">
+            <div class="slide-block slide-block--around">
+                <div class="container">
+                    <div class="row row--around-slide-block">
+                        <div class="slide-block__content slide-content">
+                            <div class="slide-content__heading">
+                                Get a Dog Up Ya’
+                            </div>
+                            <div class="slide-content__text slide-content__text--bold">
+                                She'll be right paddock how lets throw a ciggies.
+                                She'll be right ute to built like a doovalacky.
+                            </div>
+                            <div class="slide-content__text">
+                                We're going rack off bloody she'll be right pash. You
+                                little ripper tucker also get a dog up ya greenie.
+                            </div>
+
+                            <div class="slide-content__btn">
+                                <a class="btn btn--red" href="javascript:void[0]">VIEW ON DRIBBBLE<i
+                                        class="fab fa-dribbble"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="slide-block slide-block--center">
+                <div class="container">
+                    <div class="row row--center-slide-block">
+                        <div class="slide-block__content slide-content">
+                            <div class="slide-content__heading">
+                                Like What You See?
+                            </div>
+                            <div class="slide-content__btn">
+                                <a class="btn btn--white-green" href="javascript:void[0]">Buy me a beer?<i
+                                        class="fas fa-beer"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="slide-block slide-block--soc">
+                <div class="container">
+                    <div class="row row--soc-slide-block">
+                        <div class="slide-block__content slide-content">
+                            <div class="slide-content__soc-list soc-list">
+                                <a class="soc-list__item soc-list__item--dribble">
+                                    <span><i class="fab fa-dribbble"></i></span>
+                                </a>
+                                <a class="soc-list__item soc-list__item--facebook">
+                                    <span><i class="fab fa-facebook-f"></i></span>
+                                </a>
+                                <a class="soc-list__item soc-list__item--twitter">
+                                    <span><i class="fab fa-twitter"></i></span>
+                                </a>
+                                <a class="soc-list__item soc-list__item--telegram">
+                                    <span><i class="far fa-paper-plane"></i></span>
+                                </a>
+                            </div>
+                            <div class="slide-content__form">
+                                <form method="post" action="">
+                                    <div class="group-item">
+                                        <span>Newsletter Subscription</span>
+                                        <div class="group-item__input">
+                                            <input class="js_text-area-form" name="forMail" placeholder="Enter Email"
+                                                   type="text"><i
+                                                class="fas fa-envelope"></i></div>
+
+                                    </div>
+                                </form>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="swiper-slide">
+            <div class="slide-block-footer">
+                <div class="container">
+                    <div class="row row--slide-block-footer">
+                        <div class="slide-block-footer__police">© 2013 <a href="javascript:void[0]">Perth.</a> Breeding
+                            pixels
+                            since the naughties.
+                        </div>
+                        <div class="slide-block-footer__bnt-up js_btn-up" onclick="ScrollUp()">
+                            <span></span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-<footer>
-    <div class="slide-block-footer">
-        <div class="container">
-            <div class="slide-block-footer__police"></div>
-            <div class="slide-block-footer__bnt-up">
-                <span></span>
-            </div>
-        </div>
-    </div>
-</footer>
 
 
 <script src="../js/lib/swiper.min.js"></script>
 <script src="../js/lib/jquery-3.3.1.min.js"></script>
+<script src="../js/script.js"></script>
+<script>
+    var swiper = new Swiper('.swiper-container', {
+        direction: 'vertical',
+        slidesPerView: 1,
+        mousewheel: true,
+        keyboard: true,
+        simulateTouch: false,
+        bulletElement: '.js_btn-up',
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+    });
+</script>
 </body>
 </html>
