--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <title>IT zebra</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
-    <!--<meta name="viewport"-->
-          <!--content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
     <link rel="stylesheet" href="../css/lib/swiper.min.css">
     <link rel="stylesheet" href="../css/fonts.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
 </head>
 <body>
 
@@ -166,8 +162,8 @@
                                         <span>Newsletter Subscription</span>
                                         <div class="group-item__input">
                                             <input class="js_text-area-form" name="forMail" placeholder="Enter Email"
-                                                   type="text"><i
-                                                class="fas fa-envelope"></i></div>
+                                                   type="text"><button type="submit"><i
+                                                class="fas fa-envelope"></i></button></div>
 
                                     </div>
                                 </form>
@@ -202,19 +198,5 @@
 <script src="../js/lib/swiper.min.js"></script>
 <script src="../js/lib/jquery-3.3.1.min.js"></script>
 <script src="../js/script.js"></script>
-<script>
-    var swiper = new Swiper('.swiper-container', {
-        direction: 'vertical',
-        slidesPerView: 1,
-        mousewheel: true,
-        keyboard: true,
-        simulateTouch: false,
-        bulletElement: '.js_btn-up',
-        pagination: {
-            el: '.swiper-pagination',
-            clickable: true,
-        },
-    });
-</script>
 </body>
 </html>
