--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             since the naughties.
                         </div>
                         <div class="slide-block-footer__bnt-up js_btn-up" onclick="ScrollUp()">
-                            <span></span>
+                            <i class="fas fa-chevron-up"></i>
                         </div>
                     </div>
                 </div>
