--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row row--header-block">
             <div class="header-block__icon-logo">
-                <img src="../img/icon/logo.svg" alt="">
+                <img src="img/icon/logo.svg" alt="">
             </div>
             <div class="header-block__menu header-menu">
                 <div class="header-menu__icon js_header-menu-open">
